--- a/AudioPlayer/Localizable.xcstrings
+++ b/AudioPlayer/Localizable.xcstrings
@@ -19,6 +19,7 @@
     },
     "%@ - %@" : {
       "comment" : "Название книги + глава",
+      "extractionState" : "stale",
       "localizations" : {
         "en" : {
           "stringUnit" : {
