--- a/AudioPlayer/Localizable.xcstrings
+++ b/AudioPlayer/Localizable.xcstrings
@@ -100,12 +100,37 @@
         }
       }
     },
+    "%lld сек" : {
+
+    },
+    "Без названия" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Untitled"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Без названия"
+          }
+        }
+      }
+    },
     "Вы действительно хотите удалить книгу?" : {
       "localizations" : {
         "en" : {
           "stringUnit" : {
             "state" : "translated",
             "value" : "Do you want to delete the book?"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Вы действительно хотите удалить книгу?"
           }
         }
       }
@@ -116,6 +141,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Done"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Готово"
           }
         }
       }
@@ -310,6 +341,16 @@
         }
       }
     },
+    "Неизвестно" : {
+      "localizations" : {
+        "en" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Unknown"
+          }
+        }
+      }
+    },
     "О книге" : {
       "localizations" : {
         "en" : {
@@ -381,6 +422,12 @@
             "state" : "translated",
             "value" : "Rename the chapter"
           }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Переименовать главу"
+          }
         }
       }
     },
@@ -390,6 +437,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Rename the book"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Переименовать книгу"
           }
         }
       }
@@ -496,6 +549,12 @@
           "stringUnit" : {
             "state" : "translated",
             "value" : "Delete"
+          }
+        },
+        "ru" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Удалить"
           }
         }
       }
